v0.2.3: Upgrade to JDK 17, refactor OmniPropertyListService
* Upgrade to JDK 17 and use JDK 17 features where helpful
* Factor out OmniPropertyListCache to separate class
* Clean up and simplify as much as possible